Update to new API version, implement /course.
